WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114402
[CSS Exclusions] polygon shape-inside layout fails
https://bugs.webkit.org/show_bug.cgi?id=114402
Summary
[CSS Exclusions] polygon shape-inside layout fails
Hans Muller
Reported
2013-04-10 17:57:29 PDT
Created
attachment 197456
[details]
Test case screenshot. As can be seen in the attached screenshot, there's a large gap in the text where no gap should be.
Attachments
Test case screenshot.
(142.56 KB, image/png)
2013-04-10 17:57 PDT
,
Hans Muller
no flags
Details
Test case.
(2.19 KB, text/html)
2013-04-10 17:58 PDT
,
Hans Muller
no flags
Details
Simplified test case screenshot.
(54.70 KB, image/png)
2013-04-16 11:21 PDT
,
Hans Muller
no flags
Details
Simplified test case.
(547 bytes, text/html)
2013-04-16 11:23 PDT
,
Hans Muller
no flags
Details
Patch
(7.88 KB, patch)
2013-04-16 12:27 PDT
,
Hans Muller
krit
: review+
krit
: commit-queue-
Details
Formatted Diff
Diff
Patch
(7.95 KB, patch)
2013-04-16 15:44 PDT
,
Hans Muller
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Hans Muller
Comment 1
2013-04-10 17:58:33 PDT
Created
attachment 197457
[details]
Test case.
Hans Muller
Comment 2
2013-04-16 11:21:06 PDT
Created
attachment 198349
[details]
Simplified test case screenshot.
Hans Muller
Comment 3
2013-04-16 11:23:16 PDT
Created
attachment 198350
[details]
Simplified test case. This version of the test case uses the Ahem font and just a few single-character lines of text to demo the problem.
Hans Muller
Comment 4
2013-04-16 12:27:37 PDT
Created
attachment 198388
[details]
Patch
Hans Muller
Comment 5
2013-04-16 12:28:48 PDT
Comment on
attachment 198388
[details]
Patch The firstIncludedIntervalLogicalTop() method's implementation relied on optimistic assumptions about floating point accuracy which, in rare cases, caused it to discard first-fit locations based on the intersection of the minLogicalIntervalTop offset edge and a polygon offset edge. Now: we do not verify that first-fit locations based on the intersection of an offset edge and the minLogicalIntervalTop offset edge are below the horizontal minLogicalIntervalTop line. They're essentially below the line "by definition".
Dirk Schulze
Comment 6
2013-04-16 15:23:47 PDT
Comment on
attachment 198388
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=198388&action=review
r=me. Just some editorial change requests.
> Source/WebCore/ChangeLog:18 > + (WebCore::ExclusionPolygon::firstIncludedIntervalLogicalTop): Avoid floating point problems when checking intersections with the offset edge based on minLogicalIntervalTop.
Split the comment into two lines.
> Source/WebCore/ChangeLog:21 > + (WebCore::OffsetPolygonEdge::basis): Report what the offset edge is "based on": a polygon edge, the top of the line, or a (reflex) vertex.
Ditto.
> Source/WebCore/rendering/ExclusionPolygon.h:41 > + enum Basis { Edge, Vertex, LineTop };
I'd like to have a new line for each enum item. This is usually used nowadays.
Hans Muller
Comment 7
2013-04-16 15:44:12 PDT
Created
attachment 198447
[details]
Patch Made the changes that Dirk suggested.
WebKit Commit Bot
Comment 8
2013-04-16 17:08:30 PDT
Comment on
attachment 198447
[details]
Patch Clearing flags on attachment: 198447 Committed
r148582
: <
http://trac.webkit.org/changeset/148582
>
WebKit Commit Bot
Comment 9
2013-04-16 17:08:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug